--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0054) -->
 <html lang="en">
 
 <head>
@@ -7,18 +6,8 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--
-  ========================================================================
-  EXCLUSIVE ON themeforest.net
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  Template Name   : maxcriser
-  Author          : mital_04
-  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  Copyright (c) 2018 - mital_04
-  ========================================================================
-  -->
     <!-- Page Title -->
-    <title>Maksim Zakharenka - Personal Portfolio Template</title>
+    <title>Maksim Zakharenka - Personal Portfolio</title>
     <!-- / -->
 
     <!---Font Icon-->
@@ -508,16 +497,13 @@
                         <li class="portfolio-item apps" style="position: absolute; left: 0px; top: 0px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
-                                    <a href="#">
-                                        <img src="img/portfolio-1.jpg" title="" alt="">
-                                    </a>
+                                    <img src="img/portfolio-1.jpg" title="" alt="">
                                     <div class="hover">
                                         <div class="action-btn">
-                                            <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="popup-video theme-color"><i class="fa fa-play"></i></a>
-                                            <a class="lightbox-gallery theme-color" href="img/portfolio-1.jpg" title="Lightbox gallery image title...">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-1.jpg" title="Horizon GO">
                                                 <i class="fas fa-expand"></i>
                                             </a>
-                                            <a href="#" class="theme-color">
+                                            <a href="https://play.google.com/store/apps/details?id=com.lgi.orionandroid" class="theme-color">
                                                 <i class="fa fa-link"></i>
                                             </a>
                                         </div> <!-- Video Btn -->
@@ -525,8 +511,8 @@
                                 </div>
 
                                 <div class="portfolio-info">
-                                    <h5>Maksim Zakharenka Portpolio Template</h5>
-                                    <span>Resent Work</span>
+                                    <h5>Horizon GO</h5>
+                                    <span>Android application</span>
                                 </div>
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
@@ -534,16 +520,13 @@
                         <li class="portfolio-item apps" style="position: absolute; left: 379px; top: 0px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
-                                    <a href="#">
-                                        <img src="img/portfolio-2.jpg" title="" alt="">
-                                    </a>
+                                    <img src="img/portfolio-2.jpg" title="" alt="">
                                     <div class="hover">
                                         <div class="action-btn">
-                                            <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="popup-video theme-color"><i class="fa fa-play"></i></a>
-                                            <a class="lightbox-gallery theme-color" href="img/portfolio-2.jpg" title="Lightbox gallery image title...">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-2.jpg" title="Ziggo GO">
                                                 <i class="fas fa-expand"></i>
                                             </a>
-                                            <a href="#" class="theme-color">
+                                            <a href="https://play.google.com/store/apps/details?id=com.lgi.ziggotv" class="theme-color">
                                                 <i class="fa fa-link"></i>
                                             </a>
                                         </div> <!-- Video Btn -->
@@ -551,8 +534,8 @@
                                 </div>
 
                                 <div class="portfolio-info">
-                                    <h5>Maksim Zakharenka Portpolio Template</h5>
-                                    <span>Resent Work</span>
+                                    <h5>Ziggo GO</h5>
+                                    <span>Android application</span>
                                 </div>
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
@@ -560,16 +543,13 @@
                         <li class="portfolio-item photoshop apps" style="position: absolute; left: 759px; top: 0px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
-                                    <a href="#">
-                                        <img src="img/portfolio-3.jpg" title="" alt="">
-                                    </a>
+                                    <img src="img/portfolio-3.jpg" title="" alt="">
                                     <div class="hover">
                                         <div class="action-btn">
-                                            <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="popup-video theme-color"><i class="fa fa-play"></i></a>
-                                            <a class="lightbox-gallery theme-color" href="img/portfolio-3.jpg" title="Lightbox gallery image title...">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-3.jpg" title="Upc TV Schweiz">
                                                 <i class="fas fa-expand"></i>
                                             </a>
-                                            <a href="#" class="theme-color">
+                                            <a href="https://play.google.com/store/apps/details?id=com.lgi.upcch" class="theme-color">
                                                 <i class="fa fa-link"></i>
                                             </a>
                                         </div> <!-- Video Btn -->
@@ -577,8 +557,8 @@
                                 </div>
 
                                 <div class="portfolio-info">
-                                    <h5>Maksim Zakharenka Portpolio Template</h5>
-                                    <span>Resent Work</span>
+                                    <h5>Upc TV Schweiz</h5>
+                                    <span>Android application</span>
                                 </div>
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
@@ -586,16 +566,13 @@
                         <li class="portfolio-item photoshop apps" style="position: absolute; left: 0px; top: 388px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
-                                    <a href="#">
-                                        <img src="img/portfolio-4.jpg" title="" alt="">
-                                    </a>
+                                    <img src="img/portfolio-4.jpg" title="" alt="">
                                     <div class="hover">
                                         <div class="action-btn">
-                                            <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="popup-video theme-color"><i class="fa fa-play"></i></a>
-                                            <a class="lightbox-gallery theme-color" href="img/portfolio-4.jpg" title="Lightbox gallery image title...">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-4.jpg" title="European Truth">
                                                 <i class="fas fa-expand"></i>
                                             </a>
-                                            <a href="#" class="theme-color">
+                                            <a href="https://play.google.com/store/apps/details?id=com.thecriser.europeantruth" class="theme-color">
                                                 <i class="fa fa-link"></i>
                                             </a>
                                         </div> <!-- Video Btn -->
@@ -603,8 +580,8 @@
                                 </div>
 
                                 <div class="portfolio-info">
-                                    <h5>Maksim Zakharenka Portpolio</h5>
-                                    <span>Resent Work</span>
+                                    <h5>European Truth</h5>
+                                    <span>Android application</span>
                                 </div>
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
@@ -612,16 +589,13 @@
                         <li class="portfolio-item photoshop apps" style="position: absolute; left: 379px; top: 388px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
-                                    <a href="#">
-                                        <img src="img/portfolio-5.jpg" title="" alt="">
-                                    </a>
+                                    <img src="img/portfolio-5.jpg" title="" alt="">
                                     <div class="hover">
                                         <div class="action-btn">
-                                            <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="popup-video theme-color"><i class="fa fa-play"></i></a>
-                                            <a class="lightbox-gallery theme-color" href="img/portfolio-5.jpg" title="Lightbox gallery image title...">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-5.jpg" title="AvroraMarket">
                                                 <i class="fas fa-expand"></i>
                                             </a>
-                                            <a href="#" class="theme-color">
+                                            <a href="https://play.google.com/store/apps/details?id=by.avroramarket" class="theme-color">
                                                 <i class="fa fa-link"></i>
                                             </a>
                                         </div> <!-- Video Btn -->
@@ -629,8 +603,8 @@
                                 </div>
 
                                 <div class="portfolio-info">
-                                    <h5>Maksim Zakharenka Portpolio</h5>
-                                    <span>Resent Work</span>
+                                    <h5>AvroraMarket</h5>
+                                    <span>Android application</span>
                                 </div>
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
@@ -638,16 +612,13 @@
                         <li class="portfolio-item app website" style="position: absolute; left: 759px; top: 388px;">
                             <div class="portfolio-col portfolio-hover-01">
                                 <div class="portfolio-img">
-                                    <a href="#">
                                         <img src="img/portfolio-6.jpg" title="" alt="">
-                                    </a>
                                     <div class="hover">
                                         <div class="action-btn">
-                                            <a href="http://www.youtube.com/watch?v=0O2aH4XLbto" class="popup-video theme-color"><i class="fa fa-play"></i></a>
-                                            <a class="lightbox-gallery theme-color" href="img/portfolio-6.jpg" title="Lightbox gallery image title...">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-6.jpg" title="Maksim Zakharenka Portpolio">
                                                 <i class="fas fa-expand"></i>
                                             </a>
-                                            <a href="#" class="theme-color">
+                                            <a href="https://maxcriser.github.io/" class="theme-color">
                                                 <i class="fa fa-link"></i>
                                             </a>
                                         </div> <!-- Video Btn -->
@@ -656,7 +627,53 @@
 
                                 <div class="portfolio-info">
                                     <h5>Maksim Zakharenka Portpolio</h5>
-                                    <span>Resent Work</span>
+                                    <span>Landing page</span>
+                                </div>
+                            </div> <!-- Portfolio -->
+                        </li> <!-- col -->
+                        
+                        <li class="portfolio-item app website" style="position: absolute; left: 759px; top: 388px;">
+                            <div class="portfolio-col portfolio-hover-01">
+                                <div class="portfolio-img">
+                                        <img src="img/portfolio-7.jpg" title="" alt="">
+                                    <div class="hover">
+                                        <div class="action-btn">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-6.jpg" title="Maksim Zakharenka Portpolio">
+                                                <i class="fas fa-expand"></i>
+                                            </a>
+                                            <a href="https://maxcriser.github.io/" class="theme-color">
+                                                <i class="fa fa-link"></i>
+                                            </a>
+                                        </div> <!-- Video Btn -->
+                                    </div> <!-- Hover -->
+                                </div>
+
+                                <div class="portfolio-info">
+                                    <h5>CKeeper</h5>
+                                    <span>Android application</span>
+                                </div>
+                            </div> <!-- Portfolio -->
+                        </li> <!-- col -->
+                        
+                        <li class="portfolio-item app website" style="position: absolute; left: 759px; top: 388px;">
+                            <div class="portfolio-col portfolio-hover-01">
+                                <div class="portfolio-img">
+                                        <img src="img/portfolio-6.jpg" title="" alt="">
+                                    <div class="hover">
+                                        <div class="action-btn">
+                                            <a class="lightbox-gallery theme-color" href="img/portfolio-6.jpg" title="Maksim Zakharenka Portpolio">
+                                                <i class="fas fa-expand"></i>
+                                            </a>
+                                            <a href="https://maxcriser.github.io/" class="theme-color">
+                                                <i class="fa fa-link"></i>
+                                            </a>
+                                        </div> <!-- Video Btn -->
+                                    </div> <!-- Hover -->
+                                </div>
+
+                                <div class="portfolio-info">
+                                    <h5>Maksim Zakharenka Portpolio</h5>
+                                    <span>Landing page</span>
                                 </div>
                             </div> <!-- Portfolio -->
                         </li> <!-- col -->
